k8s/namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: domain-lookup-app
  labels:
    name: domain-lookup-app
