k8s/db-service-deployment.yaml
# db-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-service
  namespace: domain-lookup-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: db-service
  template:
    metadata:
      labels:
        app: db-service
    spec:
      containers:
      - name: db-service
        image: spiritualguest/db-service:latest 
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "500Mi"
            cpu: "250m"
            ephemeral-storage: "1Gi"
          limits:
            memory: "1000Mi"
            cpu: "500m"
            ephemeral-storage: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: domain-lookup-app
spec:
  selector:
    app: db-service
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
