k8s/dns-resolver-deployment.yaml
# dns-resolver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-resolver-service
  namespace: domain-lookup-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dns-resolver-service
  template:
    metadata:
      labels:
        app: dns-resolver-service
    spec:
      containers:
      - name: dns-resolver
        image: spiritualguest/dns-resolver:latest  
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "500Mi"
            cpu: "250m"
            ephemeral-storage: "1Gi"
          limits:
            memory: "1000Mi"
            cpu: "500m"
            ephemeral-storage: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: dns-resolver-service
  namespace: domain-lookup-app
spec:
  selector:
    app: dns-resolver-service
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
